# nprs

./: .gitignore  Cargo.toml  README.md  callgrind.out.59999
src/: cli.rs  image.rs  lib.rs  structures.rs  trace.rs  train.rs
src/extract/: cser.rs  extractor.rs  mod.rs  region_detector.rs  structures.rs
src/extract/cser/: detector.rs  incremental.rs  mod.rs  region.rs  trace.rs  traced_region.rs
src/extract/cser/detector/: detector.rs  mod.rs  test.rs
src/extract/cser/feature/: aspect_ratio.rs  compactness.rs  feature.rs  feature_tuple.rs  horizontal_crossings.rs  mod.rs  num_holes.rs
src/image/: image.rs  io.rs  mod.rs  pixel.rs
src/ml/: classifier.rs  mod.rs
src/structures/: mod.rs  point.rs  quad.rs  rect.rs
src/test/: image.rs
src/test/cser/: region.rs
